2012-05-29  Thiago Marcos P. Santos  <thiago.santos@intel.com>

        [EFL] Gardening of failing tests and new passes
        https://bugs.webkit.org/show_bug.cgi?id=87754

        Unreviewed gardening.

        * platform/efl/Skipped:
        * platform/efl/fast/forms/select/optgroup-rendering-expected.png: Added.
        * platform/efl/fast/forms/select/optgroup-rendering-expected.txt: Added.
        * platform/efl/test_expectations.txt:

2012-05-29  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r118620.
        http://trac.webkit.org/changeset/118620
        https://bugs.webkit.org/show_bug.cgi?id=87760

        This patch causes regression to read an empty file/blob via
        FileReader (Requested by jianli on #webkit).

        * fast/files/blob-slice-test-expected.txt:
        * fast/files/read-blob-async-expected.txt:
        * fast/files/read-file-async-expected.txt:
        * fast/files/resources/read-common.js:
        (logResult):
        * fast/files/workers/worker-read-blob-async-expected.txt:
        * fast/files/workers/worker-read-file-async-expected.txt:

2012-05-29  Jessie Berlin  <jberlin@apple.com>

        [Win] ASSERT(m_manualStream) failed in PluginView::didFinishLoading running
        fast/loader/reload-zero-byte-plugin.html

        Skip the test on Windows to get the bots greener.

        * platform/win/Skipped:

2012-05-29  Rafael Weinstein  <rafaelw@chromium.org>

        Adding VISTA timeout expectations to a number of viewport tests. Also, narrowing optgroup-clicking.html
        to be just MAC.

        * platform/chromium/test_expectations.txt:

2012-05-29  Victor Carbune  <victor@rosedu.org>

        Update cue event dispatching for zero and negative duration cues
        https://bugs.webkit.org/show_bug.cgi?id=85143

        Reviewed by Eric Carlson.

        * media/track/captions-webvtt/missed-cues.vtt: Added negative
        duration cue and changed a missed cue to have zero-length.