@@ -1,3 +1,13 @@
+2012-05-29  Abhishek Arya  <inferno@chromium.org>
+
+        Crash due to text fragment destruction when updating first-letter block.
+        https://bugs.webkit.org/show_bug.cgi?id=87751
+
+        Reviewed by Eric Seidel.
+
+        * fast/text/text-fragment-first-letter-update-crash-expected.txt: Added.
+        * fast/text/text-fragment-first-letter-update-crash.html: Added.
+
 2012-05-29  Thiago Marcos P. Santos  <thiago.santos@intel.com>
 
         [EFL] Gardening of failing tests and new passes
